feat: complete discovery-to-rulebook journey